fix(tabs): reduce inner padding on mobile devices

--- a/projects/canopy/src/styles/variables/components/_tabs.scss
+++ b/projects/canopy/src/styles/variables/components/_tabs.scss
@@ -1,7 +1,8 @@
 :root {
   --tabs-border-bottom-width: var(--border-width);
   --tabs-border-bottom-color: var(--color-platinum);
-  --tabs-horizontal-padding: var(--space-md);
+  --tabs-horizontal-padding: var(--space-sm);
+  --tabs-md-horizontal-padding: var(--space-md);
   --tabs-lg-horizontal-padding: var(--space-lg);
 
   --tab-list-item-horizontal-padding: var(--space-xxs);
